@@ -7,9 +7,11 @@
 ## Notes-zhTW: 提示欄顯示其他玩家的平均物品等級
 ## Title-zhCN: 简易物品等级
 ## Notes-zhCN: 提示栏显示其它玩家的平均物品等级
+## Title-ruRU: Simple iLevel
+## Notes-ruRU: очистить все настройки и кэш
 
 ## Author: Scotepi
-## Version: 2.1.1b
+## Version: 2.1.2a
 ## SavedVariables: SIL_Settings, SIL_CacheGUID
 
 ## X-Category: Information
